@startuml

title __APP's Class Diagram__\n

  package com.example.videoplayer {
    class BuildConfig {
    }
  }
  

  package com.example.videoplayer {
    interface CustomItemClickListner {
    }
  }
  

  package com.example.videoplayer {
    class ExampleInstrumentedTest {
    }
  }
  

  package com.example.videoplayer {
    class MainActivity {
    }
  }
  

  package com.example.videoplayer {
    class MyAdapter {
    }
  }
  

  package com.example.videoplayer {
    class Player {
    }
  }
  

  package com.example.videoplayer {
    class SplashScreen {
    }
  }
  

  package com.example.videoplayer {
    class Video {
    }
  }
  

  MainActivity -up-|> OnClickListener
  MainActivity -up-|> AppCompatActivity
  MainActivity o-- MyAdapter : myAdapter
  MyAdapter -up-|> Adapter
  MyAdapter o-- CustomItemClickListner : customItemClickListner
  Player -up-|> BetterVideoCallback
  Player -up-|> AppCompatActivity
  SplashScreen -up-|> AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
